selfhost/test/typechecker/if/error_unfilled_holes_bindingdecl.4.out
Error at %FILE_NAME%:1:41
Type mismatch
  |  val a = if true { Some([]) } else Option.None_
                                             ^
Expected: <unknown>[]?
but instead found: <unknown>?
