selfhost/test/typechecker/if/error_unfilled_holes_bindingdecl.4.abra
val a = if true { Some([]) } else Option.None_